<resources>
    <string name="app_name">EasyMusic</string>
    <string name="collect">收藏</string>
    <string name="myMusic">我的音乐</string>
    <string name="discovery">发现</string>
    <string name="rank">歌曲排行榜</string>
    <string name="recommendMv">推荐MV</string>
    <string name="search">搜索</string>
    <string name="hotSinger">热门歌手</string>
    <string name="recommendMusicList">推荐歌单</string>
    <string name="recommendNewSongs">推荐新音乐</string>
    <string name="emptyText">本地文件没有音乐或尚未进行扫描</string>
    <string name="addLocalSongs">点击添加本地文件</string>
    <string name="search_tips">请输入要查找的歌曲、歌手</string>
    <string name="setTimerTask">设置定时关闭</string>
    <string name="title_activity_singer">SingerActivity</string>
    <string name="title_activity_recommend_song_list">RecommendSongListActivity</string>

    <string name="Account">账号:</string>
    <string name="Password">密码:</string>
    <string name="Login">登录</string>
    <string name="rememberPwd">记住密码</string>
    <string name="EnterAccount">请输入账号</string>
    <string name="EnterPassword">请输入密码</string>
    <string name="exchange_user">切换用户</string>
    <string name="scanLocalMusic">扫面本地音乐</string>
    <string name="register_newUser">注册新用户</string>
    <string name="forget_password">忘记密码</string>
    <string name="next_step">下一步</string>
    <string name="email_tips">你会收到一条带有验证码的邮箱，请输入邮箱里的验证码</string>
    <string name="network_abnormal">网络异常</string>
    <string name="registerSuccess">注册成功！，已为你自动登陆</string>
    <string name="modifyPwdSuccess">密码修改成功</string>
    <string name="modifyPwdFail">密码修改失败</string>
    <string name="yes">是</string>
    <string name="no">否</string>
</resources>
