<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_marginTop="70dp"
        android:id="@+id/logo"
        android:src="@drawable/loginlogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_below="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/background">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/Account"
            android:textColor="@color/textView_color" />

        <EditText
            android:id="@+id/accountName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittext"
            android:singleLine="true"
            android:inputType="text"
            android:hint="@string/EnterAccount"
            android:textColor="@color/editText_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/Password"
            android:textColor="@color/editText_color" />

        <EditText
            android:id="@+id/accountPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittext"
            android:inputType="textPassword"
            android:hint="@string/EnterPassword"
            android:textColor="@color/editText_color"/>

        <TextView
            android:textColor="@color/editText_color"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/forget_password"
            android:text="@string/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/loginbutton"
            android:text="@string/Login"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/register_newUser"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/loginbutton"
            android:text="@string/register_newUser"
            android:textColor="@android:color/white" />

    </LinearLayout>
</RelativeLayout>