<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="GradleDependency">
    <ScrollView
        android:background="#F5F5F5"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--热门歌手-->
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginTop="10dp"
                    android:textSize="19sp"
                    android:textColor="@color/TextColor"
                    android:text="@string/hotSinger"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp" />
                <HorizontalScrollView
                    android:scrollbars="none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.RecyclerView
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/artist_recyclerView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp" />
                </HorizontalScrollView>
            </LinearLayout>

            <!--推荐歌单-->
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="19sp"
                    android:textColor="@color/TextColor"
                    android:text="@string/recommendMusicList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp" />
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/musicList_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <!--推荐新歌曲-->
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="19sp"
                    android:textColor="@color/TextColor"
                    android:text="@string/recommendNewSongs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recommendNewMusic_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>