<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ver="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Login.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/themeColor"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <LinearLayout
        android:visibility="visible"
        android:id="@+id/fill_in_user_information"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/Account"
            android:textColor="@color/textView_color" />

        <EditText

            android:id="@+id/userAccount"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittext"
            android:singleLine="true"
            android:inputType="text"
            android:hint="设置登录账户,不少于6位"
            android:textColor="@color/editText_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/Password"
            android:textColor="@color/textView_color" />

        <EditText
            android:id="@+id/accountPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittext"
            android:inputType="textPassword"
            android:hint="设置登录密码，不少于6位"
            android:textColor="@color/editText_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:text="邮箱"
            android:textColor="@color/textView_color" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittext"
            android:inputType="text"
            android:hint="设置验证邮箱"
            android:textColor="@color/editText_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:text="用户昵称"
            android:textColor="@color/textView_color" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittext"
            android:inputType="text"
            android:hint="设置用户昵称"
            android:textColor="@color/editText_color"/>


        <Button
            android:id="@+id/next_step"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/loginbutton"
            android:text="@string/next_step"
            android:textColor="@android:color/white" />
    </LinearLayout>


    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/emailVerify"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:text="你的邮箱号：mr754218565@sina.com"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/tips_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_below="@+id/tips_a"
            android:id="@+id/tips_b"
            android:text="@string/email_tips"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.rex.easymusic.widget.VerificationCodeInput
            android:layout_below="@+id/tips_b"
            android:digits="1234567890"
            android:id="@+id/verificationCodeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:focusable="true"
            ver:box_bg_normal="@drawable/shape_verification_edit_bg_normal"
            ver:box_bg_focus="@drawable/shape_verification_edit_bg_focus"
            ver:child_h_padding="5dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp" />

    </RelativeLayout>

</RelativeLayout>